[gd_scene load_steps=4 format=3 uid="uid://b7y5dn1j3ymcx"]

[ext_resource type="Script" path="res://App/Survey/survey.gd" id="1_vde67"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_67y6w"]
color = Color(0.595154, 0.595154, 0.595154, 1)
thickness = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_62n4n"]
content_margin_right = 20.0
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="Survey" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.90327, 0.935962, 1, 1)
script = ExtResource("1_vde67")
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = -1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_67y6w")

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
color = Color(0.881937, 0.881937, 0.881937, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ColorRect"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 80
alignment = 1

[node name="PlaceHolder" type="Control" parent="VBoxContainer/ColorRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2

[node name="OpenSurveyBtn" type="Button" parent="VBoxContainer/ColorRect/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Open Survey"
flat = true

[node name="SurveyBtn" type="Button" parent="VBoxContainer/ColorRect/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Survey"
flat = true

[node name="UpdateDemandBtn" type="Button" parent="VBoxContainer/ColorRect/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Update Demand"
flat = true

[node name="TotalLbl" type="Label" parent="VBoxContainer/ColorRect/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_62n4n")
text = "( Total: 0 )"

[node name="FileContent" type="Panel" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="VBoxContainer/ColorRect/HBoxContainer/OpenSurveyBtn" to="." method="_on_open_survey_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/ColorRect/HBoxContainer/SurveyBtn" to="." method="_on_survey_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/ColorRect/HBoxContainer/UpdateDemandBtn" to="." method="_on_update_demand_btn_pressed"]
